wav conversion for VBR